@@ -2,6 +2,7 @@ package com.example.calendar.service;
 
 import com.example.calendar.DTO.TaskDTO;
 import com.example.calendar.model.*;
+import com.example.calendar.repository.DepartmentRepository;
 import com.example.calendar.repository.ProjectRepository;
 import com.example.calendar.repository.TaskRepository;
 import com.example.calendar.repository.UserRepository;
@@ -26,24 +27,47 @@ public class TaskService {
     private final ProjectRepository projectRepository;
     private final AssignmentRuleService assignmentRuleService;
     private final TaskHistoryService taskHistoryService;
+    private final SchemePermissionService schemePermissionService;
+    private final DepartmentRepository departmentRepository;
 
-    public TaskService(TaskRepository taskRepository, UserRepository userRepository, ProjectRepository projectRepository, AssignmentRuleService assignmentRuleService, TaskHistoryService taskHistoryService) {
+    public TaskService(TaskRepository taskRepository,
+                       UserRepository userRepository,
+                       ProjectRepository projectRepository,
+                       AssignmentRuleService assignmentRuleService,
+                       TaskHistoryService taskHistoryService,
+                       SchemePermissionService schemePermissionService,
+                       DepartmentRepository departmentRepository) {
         this.taskRepository = taskRepository;
         this.userRepository = userRepository;
         this.projectRepository = projectRepository;
         this.assignmentRuleService = assignmentRuleService;
         this.taskHistoryService = taskHistoryService;
+        this.schemePermissionService = schemePermissionService;
+        this.departmentRepository = departmentRepository;
     }
 
     public TaskDTO createTask(TaskDTO taskDTO) {
         User user = getCurrentUser();
-        Project project = projectRepository.findByIdAndCompany(taskDTO.getProjectId(), user.getCompany())
-                .orElseThrow(() -> new UsernameNotFoundException("Нельзя дать задачу не своей группе"));
+
+        if (!schemePermissionService.hasPermission(user, "create_task")) {
+            throw new SecurityException("Недостаточно прав для создания задачи");
+        }
+
+        Project project = projectRepository.findByIdAndDepartment_Company(
+                        taskDTO.getProjectId(), user.getCompany())
+                .orElseThrow(() -> new RuntimeException("Проект не найден в вашей компании"));
+
         User assigneeUser = userRepository.findById(taskDTO.getAssigneeId())
-                .orElseThrow(() -> new UsernameNotFoundException("Пользователь не найден"));
+                .orElseThrow(() -> new RuntimeException("Пользователь не найден"));
+
+        if (!assigneeUser.getCompany().getId().equals(user.getCompany().getId())) {
+            throw new SecurityException("Исполнитель должен быть из вашей компании");
+        }
+
         if (!assignmentRuleService.canUserAssignToUser(user, assigneeUser)) {
-            throw new AccessDeniedException(
-                    "У вас нет прав назначать задачи пользователям из отдела " + assigneeUser.getDepartment().getName()
+            throw new SecurityException(
+                    "У вас нет прав назначать задачи пользователям из отдела " +
+                            assigneeUser.getDepartment().getName()
             );
         }
 
@@ -65,26 +89,40 @@ public class TaskService {
 
     public TaskDTO createSubtask(Long taskId, TaskDTO parentTaskDTO) {
         User user = getCurrentUser();
-        Task parentTask = taskRepository.findByIdWithSubtasks(taskId)
-                .orElseThrow(() -> new UsernameNotFoundException("Данной задачи не существует"));
 
-        if (!parentTask.getAssignee().getCompany().equals(user.getCompany())) {
-            throw new RuntimeException("Только сотрудник компании может делать подзадачи");
+        if (!schemePermissionService.hasPermission(user, "create_subtask")) {
+            throw new SecurityException("Недостаточно прав для создания подзадачи");
         }
+
+        Task parentTask = taskRepository.findByIdWithSubtasks(taskId)
+                .orElseThrow(() -> new RuntimeException("Данной задачи не существует"));
+
+        if (!isUserInSameCompany(user, parentTask)) {
+            throw new SecurityException("Только сотрудник компании может делать подзадачи");
+        }
+
         if (parentTask.getStatus() == TaskStatus.DONE){
-            throw new RuntimeException("Данная задача уже выполнена к ней нельзя сделать подзадачу");
+            throw new RuntimeException("Данная задача уже выполнена, к ней нельзя добавить подзадачу");
         }
-        if (!parentTask.getAssignee().equals(user) && !parentTask.getReporter().equals(user)) {
-            throw new RuntimeException("Только исполнитель или создатель задачи может делать подзадачи");
+
+        boolean canCreateSubtask = parentTask.getAssignee() != null &&
+                parentTask.getAssignee().getId().equals(user.getId()) ||
+                parentTask.getReporter() != null &&
+                        parentTask.getReporter().getId().equals(user.getId());
+
+        if (!canCreateSubtask) {
+            throw new SecurityException("Только исполнитель или создатель задачи может создавать подзадачи");
         }
 
         User assignee = userRepository.findById(parentTaskDTO.getAssigneeId())
-                .orElseThrow(() -> new EntityNotFoundException("Исполнитель не найден"));
-        if (!assignee.getCompany().equals(user.getCompany())) {
-            throw new RuntimeException("Исполнитель должен быть из той же компании что и задача");
+                .orElseThrow(() -> new RuntimeException("Исполнитель не найден"));
+
+        if (!assignee.getCompany().getId().equals(user.getCompany().getId())) {
+            throw new SecurityException("Исполнитель должен быть из той же компании");
         }
+
         if (!assignmentRuleService.canUserAssignToUser(user, assignee)) {
-            throw new RuntimeException("Вы не можете назначить задачу на " + assignee.getUserName());
+            throw new SecurityException("Вы не можете назначить задачу на " + assignee.getUserName());
         }
 
         Task subtask = new Task();
@@ -99,192 +137,287 @@ public class TaskService {
         subtask.setParentTask(parentTask);
 
         Task saveSubtask = taskRepository.save(subtask);
+
         long count = parentTask.getSubtasks().size();
         if (count == 0) {
             taskHistoryService.logTaskChange(parentTask, user, "Subtask", "None", "Created");
-        }
-        else {
-            taskHistoryService.logTaskChange(parentTask, user, "Subtask", count + " subtask", (count + 1) + " subtask");
+        } else {
+            taskHistoryService.logTaskChange(parentTask, user, "Subtask",
+                    count + " subtask", (count + 1) + " subtask");
         }
 
         return convertTaskToDTO(saveSubtask);
     }
 
     public TaskDTO changeAssignee(Long taskId, Long assigneeId) {
-        if (assigneeId == null || assigneeId <= 0) {
-            throw new IllegalArgumentException("Некорректный assigneeId");
-        }
-        User newUser = userRepository.findById(assigneeId)
-                .orElseThrow(() -> new EntityNotFoundException("Пользователь не найден"));
-
         User user = getCurrentUser();
+
+        if (!schemePermissionService.hasPermission(user, "change_assignee")) {
+            throw new SecurityException("Недостаточно прав для смены исполнителя");
+        }
+
+        User newUser = userRepository.findById(assigneeId)
+                .orElseThrow(() -> new RuntimeException("Пользователь не найден"));
+
         Task task = taskRepository.findById(taskId)
-                .orElseThrow(() -> new UsernameNotFoundException("Данной задачи не существует"));
+                .orElseThrow(() -> new RuntimeException("Данной задачи не существует"));
 
-        if (!user.getCompany().getId().equals(task.getProject().getCompany().getId())) {
-            throw new AccessDeniedException("Вы можете менять задачи только в своей компании");
+        if (!isUserInSameCompany(user, task)) {
+            throw new SecurityException("Вы можете менять задачи только в своей компании");
         }
-        if (!task.getProject().getCompany().getId().equals(newUser.getCompany().getId())) {
-            throw new AccessDeniedException("Исполнитель должен быть из той же компании как и сама задача");
+
+        if (!newUser.getCompany().getId().equals(user.getCompany().getId())) {
+            throw new SecurityException("Исполнитель должен быть из той же компании");
         }
+
         if (!assignmentRuleService.canUserAssignToUser(user, newUser)) {
-            throw new AccessDeniedException("Вы не можете поставить задачу на " + newUser.getUserName());
+            throw new SecurityException("Вы не можете назначить задачу на " + newUser.getUserName());
         }
 
-        taskHistoryService.logTaskChange(task, user, "Assignee", task.getAssignee().getUserName(), newUser.getUserName());
+        String oldAssignee = task.getAssignee() != null ? task.getAssignee().getUserName() : "None";
+        taskHistoryService.logTaskChange(task, user, "Assignee", oldAssignee, newUser.getUserName());
         task.setAssignee(newUser);
+
         return convertTaskToDTO(taskRepository.save(task));
     }
 
     public TaskDTO changeStatus(Long taskId, TaskStatus newStatus) {
         User user = getCurrentUser();
 
-        Task task = taskRepository.findById(taskId)
-                .orElseThrow(() -> new EntityNotFoundException("Данной задачи не существует"));
-
-        if (!user.getCompany().getId().equals(task.getProject().getCompany().getId())) {
-            throw new AccessDeniedException("Вы можете менять задачи только в своей компании");
+        if (!schemePermissionService.hasPermission(user, "change_task_status")) {
+            throw new SecurityException("Недостаточно прав для смены статуса задачи");
         }
-        if (!task.getAssignee().getId().equals(user.getId())){
-            throw new AccessDeniedException("Только исполнитель может менять статус задачи");
+
+        Task task = taskRepository.findById(taskId)
+                .orElseThrow(() -> new RuntimeException("Данной задачи не существует"));
+
+        if (!isUserInSameCompany(user, task)) {
+            throw new SecurityException("Вы можете менять задачи только в своей компании");
+        }
+
+        if (task.getAssignee() == null || !task.getAssignee().getId().equals(user.getId())) {
+            throw new SecurityException("Только исполнитель может менять статус задачи");
         }
 
         if (newStatus == TaskStatus.DONE && !task.getSubtasks().isEmpty()) {
             boolean allDone = task.getSubtasks().stream()
                     .allMatch(subtask -> subtask.getStatus() == TaskStatus.DONE);
             if (!allDone) {
-                throw new AccessDeniedException("Нельзя закрыть задачу: не все подзадачи выполнены");
+                throw new SecurityException("Нельзя закрыть задачу: не все подзадачи выполнены");
             }
         }
 
         TaskStatus oldStatus = task.getStatus();
         if (!TaskStatus.canTransition(oldStatus, newStatus)){
-            throw new IllegalStateException("Переход из " + task.getStatus() + " в " + newStatus + " запрещён");
+            throw new IllegalStateException("Переход из " + oldStatus + " в " + newStatus + " запрещён");
         }
 
         task.setStatus(newStatus);
         taskHistoryService.logTaskChange(task, user, "Status", oldStatus.toString(), newStatus.toString());
+
         return convertTaskToDTO(taskRepository.save(task));
     }
 
     public TaskDTO changeEndTime(Long taskId, LocalDateTime endTime) {
         User user = getCurrentUser();
-        Task task = taskRepository.findById(taskId)
-                .orElseThrow(() -> new EntityNotFoundException("Данной задачи не существует"));
 
-        if (!user.getCompany().getId().equals(task.getProject().getCompany().getId())) {
-            throw new AccessDeniedException("Вы можете менять задачи только в своей компании");
+        if (!schemePermissionService.hasPermission(user, "change_task_deadline")) {
+            throw new SecurityException("Недостаточно прав для смены дедлайна задачи");
         }
+
+        Task task = taskRepository.findById(taskId)
+                .orElseThrow(() -> new RuntimeException("Данной задачи не существует"));
+
+        if (!isUserInSameCompany(user, task)) {
+            throw new SecurityException("Вы можете менять задачи только в своей компании");
+        }
+
         if (!task.getReporter().getId().equals(user.getId())){
-            throw new AccessDeniedException("Только тот кто поставил задачу может менять срок выполнения задачи");
+            throw new SecurityException("Только тот кто поставил задачу может менять срок выполнения задачи");
         }
+
         if (!endTime.isAfter(task.getStartTime())) {
             throw new IllegalArgumentException("Время окончания должно быть позже начала");
         }
 
-        taskHistoryService.logTaskChange(task, user, "EndTime", task.getEndTime().toString(), endTime.toString());
+        taskHistoryService.logTaskChange(task, user, "EndTime",
+                task.getEndTime().toString(), endTime.toString());
         task.setEndTime(endTime);
+
         return convertTaskToDTO(taskRepository.save(task));
     }
 
     public TaskDTO changeTitle(Long taskId, String title) {
         User user = getCurrentUser();
-        Task task = taskRepository.findById(taskId)
-                .orElseThrow(() -> new EntityNotFoundException("Данной задачи не существует"));
 
-        if (!user.getCompany().getId().equals(task.getProject().getCompany().getId())) {
-            throw new AccessDeniedException("Вы можете менять данные задачи только в своей компании");
+        if (!schemePermissionService.hasPermission(user, "change_task_title")) {
+            throw new SecurityException("Недостаточно прав для смены названия задачи");
         }
+
+        Task task = taskRepository.findById(taskId)
+                .orElseThrow(() -> new RuntimeException("Данной задачи не существует"));
+
+        if (!isUserInSameCompany(user, task)) {
+            throw new SecurityException("Вы можете менять данные задачи только в своей компании");
+        }
+
         if (!task.getReporter().getId().equals(user.getId())){
-            throw new AccessDeniedException("Только тот кто поставил задачу может менять название задачи");
+            throw new SecurityException("Только тот кто поставил задачу может менять название задачи");
         }
+
         if (task.getTitle().equals(title)) {
             throw new IllegalArgumentException("Название задачи одинаково с предыдущему");
         }
 
         taskHistoryService.logTaskChange(task, user, "Title", task.getTitle(), title);
         task.setTitle(title);
+
         return convertTaskToDTO(taskRepository.save(task));
     }
 
     public TaskDTO changePriority(Long taskId, TaskPriority priority) {
         User user = getCurrentUser();
-        Task task = taskRepository.findById(taskId)
-                .orElseThrow(() -> new EntityNotFoundException("Данной задачи не существует"));
 
-        if (!user.getCompany().getId().equals(task.getProject().getCompany().getId())) {
-            throw new AccessDeniedException("Вы можете менять данные задачи только в своей компании");
+        if (!schemePermissionService.hasPermission(user, "change_task_priority")) {
+            throw new SecurityException("Недостаточно прав для смены приоритета задачи");
         }
+
+        Task task = taskRepository.findById(taskId)
+                .orElseThrow(() -> new RuntimeException("Данной задачи не существует"));
+
+        if (!isUserInSameCompany(user, task)) {
+            throw new SecurityException("Вы можете менять данные задачи только в своей компании");
+        }
+
         if (!task.getReporter().getId().equals(user.getId())){
-            throw new AccessDeniedException("Только тот кто поставил задачу может менять её приоритет");
+            throw new SecurityException("Только тот кто поставил задачу может менять её приоритет");
         }
+
         if (task.getPriority().equals(priority)) {
             throw new IllegalArgumentException("Приоритет не изменился");
         }
 
-        taskHistoryService.logTaskChange(task, user, "Priority", task.getPriority().toString(), priority.toString());
+        taskHistoryService.logTaskChange(task, user, "Priority",
+                task.getPriority().toString(), priority.toString());
         task.setPriority(priority);
+
         return convertTaskToDTO(taskRepository.save(task));
     }
 
     public TaskDTO changeDescription(Long taskId, String description) {
         User user = getCurrentUser();
-        Task task = taskRepository.findById(taskId)
-                .orElseThrow(() -> new EntityNotFoundException("Данной задачи не существует"));
 
-        if (!user.getCompany().getId().equals(task.getProject().getCompany().getId())) {
-            throw new AccessDeniedException("Вы можете менять данные задачи только в своей компании");
+        if (!schemePermissionService.hasPermission(user, "change_task_description")) {
+            throw new SecurityException("Недостаточно прав для смены описания задачи");
         }
-        if (!task.getAssignee().getId().equals(user.getId())  && !user.getRole().getCode().equals("ADMIN")){
-            throw new AccessDeniedException("Только исполнитель задачи может менять её приоритет");
+
+        Task task = taskRepository.findById(taskId)
+                .orElseThrow(() -> new RuntimeException("Данной задачи не существует"));
+
+        if (!isUserInSameCompany(user, task)) {
+            throw new SecurityException("Вы можете менять данные задачи только в своей компании");
         }
+
+        if (!task.getAssignee().getId().equals(user.getId()) &&
+                !schemePermissionService.hasPermission(user, "edit_any_task_description")) {
+            throw new SecurityException("Только исполнитель задачи может менять её описание");
+        }
+
         if (task.getDescription().equals(description)) {
             throw new IllegalArgumentException("Описание не изменилось");
         }
 
-        taskHistoryService.logTaskChange(task, user, "Description", task.getDescription(), description);
+        taskHistoryService.logTaskChange(task, user, "Description",
+                task.getDescription(), description);
         task.setDescription(description);
+
         return convertTaskToDTO(taskRepository.save(task));
     }
 
     public TaskDTO getTaskById(Long taskId) {
         User user = getCurrentUser();
-        Task task = taskRepository.findById(taskId)
-                .orElseThrow(() -> new EntityNotFoundException("Задача не найдена"));
-        if (!user.getCompany().getId().equals(task.getProject().getCompany().getId())) {
-            throw new AccessDeniedException("Вы не можете смотреть задачи другой компании");
+
+        if (!schemePermissionService.hasPermission(user, "view_task")) {
+            throw new SecurityException("Недостаточно прав для просмотра задачи");
         }
+
+        Task task = taskRepository.findById(taskId)
+                .orElseThrow(() -> new RuntimeException("Задача не найдена"));
+
+        if (!isUserInSameCompany(user, task)) {
+            throw new SecurityException("Вы не можете смотреть задачи другой компании");
+        }
+
+        if (!hasAccessToTask(user, task)) {
+            throw new SecurityException("Нет доступа к этой задаче");
+        }
+
         return convertTaskToDTO(task);
     }
 
     public Task GetTaskById(Long taskId) {
         User user = getCurrentUser();
         Task task = taskRepository.findById(taskId)
-                .orElseThrow(() -> new EntityNotFoundException("Задача не найдена"));
-        if (!user.getCompany().getId().equals(task.getProject().getCompany().getId())) {
-            throw new AccessDeniedException("Вы не можете смотреть задачи другой компании");
+                .orElseThrow(() -> new RuntimeException("Задача не найдена"));
+
+        if (!isUserInSameCompany(user, task)) {
+            throw new SecurityException("Вы не можете смотреть задачи другой компании");
         }
+
         return task;
     }
 
     public List<TaskDTO> getTasksByAssignee(){
         User user = getCurrentUser();
+
+        if (!schemePermissionService.hasPermission(user, "view_my_tasks")) {
+            throw new SecurityException("Недостаточно прав для просмотра своих задач");
+        }
+
         return taskRepository.findByAssignee(user).stream()
                 .map(this::convertTaskToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<TaskDTO> getTasksByReporter(){
         User user = getCurrentUser();
+
+        if (!schemePermissionService.hasPermission(user, "view_created_tasks")) {
+            throw new SecurityException("Недостаточно прав для просмотра созданных задач");
+        }
+
         return taskRepository.findByReporter(user).stream()
+                .map(this::convertTaskToDTO)
+                .toList();
+    }
+
+    public List<TaskDTO> getTasksByDepartment(){
+        User user = getCurrentUser();
+
+        if (!schemePermissionService.hasPermission(user, "view_department_tasks")) {
+            throw new SecurityException("Недостаточно прав для просмотра задач отдела");
+        }
+
+        if (user.getDepartment() == null) {
+            throw new IllegalArgumentException("У пользователя не указан отдел");
+        }
+
+        return taskRepository.findByDepartment(user.getDepartment()).stream()
                 .map(this::convertTaskToDTO)
                 .toList();
     }
 
     public List<TaskDTO> getTasksByProjectId(Long projectId){
         User user = getCurrentUser();
-        Project project = projectRepository.findByIdAndCompany(projectId, user.getCompany())
-                .orElseThrow(() -> new UsernameNotFoundException("Данная задача не найдена внутри вашего проекта"));
+
+        if (!schemePermissionService.hasPermission(user, "view_project_tasks")) {
+            throw new SecurityException("Недостаточно прав для просмотра задач проекта");
+        }
+
+        Project project = projectRepository.findByIdAndDepartment_Company(
+                        projectId, user.getCompany())
+                .orElseThrow(() -> new RuntimeException("Проект не найден в вашей компании"));
+
         return taskRepository.findByProject(project).stream()
                 .map(this::convertTaskToDTO)
                 .toList();
@@ -292,12 +425,21 @@ public class TaskService {
 
     public List<TaskDTO> getSubTasksByTaskId(Long taskId){
         User user = getCurrentUser();
-        Task task = taskRepository.findById(taskId)
-                .orElseThrow(() -> new EntityNotFoundException("Данной задачи не существует"));
 
-        if (!user.getCompany().getId().equals(task.getProject().getCompany().getId())) {
-            throw new AccessDeniedException("Вы не можете получить задачи другой компании");
-        }//надо подумать все могут смотреть подзадачи или нет
+        if (!schemePermissionService.hasPermission(user, "view_subtasks")) {
+            throw new SecurityException("Недостаточно прав для просмотра подзадач");
+        }
+
+        Task task = taskRepository.findById(taskId)
+                .orElseThrow(() -> new RuntimeException("Данной задачи не существует"));
+
+        if (!isUserInSameCompany(user, task)) {
+            throw new SecurityException("Вы не можете получить задачи другой компании");
+        }
+
+        if (!hasAccessToTask(user, task)) {
+            throw new SecurityException("Нет доступа к этой задаче");
+        }
 
         List<Task> subtasks = task.getSubtasks();
         return subtasks.stream()
@@ -307,23 +449,46 @@ public class TaskService {
 
     public List<TaskDTO> getAllTasksInCompany(){
         User user = getCurrentUser();
-        Company company = user.getCompany();
-        List<Task> task = taskRepository.findByProject_Company(company);
-        return task.stream()
+
+        if (!schemePermissionService.hasPermission(user, "view_all_company_tasks")) {
+            throw new SecurityException("Недостаточно прав для просмотра всех задач компании");
+        }
+
+        List<Task> tasks;
+
+        if (user.getSystemRole() == SystemRole.COMPANY_OWNER) {
+            // Владелец видит все задачи компании
+            tasks = taskRepository.findByProject_Department_Company(user.getCompany());
+        } else if (user.getSystemRole() == SystemRole.DEPARTMENT_HEAD && user.getDepartment() != null) {
+            // Руководитель отдела видит задачи своего отдела
+            tasks = taskRepository.findByDepartment(user.getDepartment());
+        } else {
+            // Обычный пользователь видит только доступные ему задачи
+            tasks = taskRepository.findByAssigneeOrReporter(user);
+        }
+
+        return tasks.stream()
                 .map(this::convertTaskToDTO)
                 .toList();
     }
 
     public void deleteTask(Long taskId){
         User user = getCurrentUser();
-        Task task = taskRepository.findById(taskId)
-                .orElseThrow(() -> new EntityNotFoundException("Данной задачи не существует"));
 
-        if (!user.getCompany().getId().equals(task.getProject().getCompany().getId())) {
-            throw new AccessDeniedException("Вы не можете получить задачи другой компании");
+        if (!schemePermissionService.hasPermission(user, "delete_task")) {
+            throw new SecurityException("Недостаточно прав для удаления задачи");
         }
-        if (!task.getReporter().getId().equals(user.getId())){
-            throw new AccessDeniedException("Только создатель может удалить задачу");
+
+        Task task = taskRepository.findById(taskId)
+                .orElseThrow(() -> new RuntimeException("Данной задачи не существует"));
+
+        if (!isUserInSameCompany(user, task)) {
+            throw new SecurityException("Вы не можете получить задачи другой компании");
+        }
+
+        if (!task.getReporter().getId().equals(user.getId()) &&
+                !schemePermissionService.hasPermission(user, "delete_any_task")) {
+            throw new SecurityException("Только создатель может удалить задачу");
         }
 
         taskHistoryService.logTaskChange(task, user, "Delete Task", task.getTitle(), task.getTitle());
@@ -332,6 +497,41 @@ public class TaskService {
 
     public boolean existsByAssigneeAndId(User user, Long taskId){
         return taskRepository.existsByAssigneeAndId(user, taskId);
+    }
+
+    private boolean isUserInSameCompany(User user, Task task) {
+        if (user.getCompany() == null || task.getProject() == null ||
+                task.getProject().getDepartment() == null ||
+                task.getProject().getDepartment().getCompany() == null) {
+            return false;
+        }
+
+        return user.getCompany().getId()
+                .equals(task.getProject().getDepartment().getCompany().getId());
+    }
+
+    private boolean hasAccessToTask(User user, Task task) {
+        if (user.getSystemRole() == SystemRole.COMPANY_OWNER) {
+            return true;
+        }
+
+        if (user.getSystemRole() == SystemRole.DEPARTMENT_HEAD &&
+                user.getDepartment() != null &&
+                task.getProject().getDepartment() != null) {
+            return user.getDepartment().getId()
+                    .equals(task.getProject().getDepartment().getId());
+        }
+
+        boolean isAssignee = task.getAssignee() != null &&
+                task.getAssignee().getId().equals(user.getId());
+
+        boolean isReporter = task.getReporter() != null &&
+                task.getReporter().getId().equals(user.getId());
+
+        boolean hasAccessPermission = schemePermissionService
+                .hasPermission(user, "view_all_tasks");
+
+        return isAssignee || isReporter || hasAccessPermission;
     }
 
     private User getCurrentUser() {
@@ -349,12 +549,26 @@ public class TaskService {
         taskDTO.setEnd(task.getEndTime());
         taskDTO.setStatus(task.getStatus());
         taskDTO.setPriority(task.getPriority());
-        taskDTO.setReporterName(task.getReporter().getUserName());
-        User assignee = task.getAssignee();
-        if (assignee != null) {
-            taskDTO.setAssigneeId(assignee.getId());
-            taskDTO.setAssigneeName(assignee.getUserName());
+
+        if (task.getReporter() != null) {
+            taskDTO.setReporterId(task.getReporter().getId()); // ← Теперь есть сеттер
+            taskDTO.setReporterName(task.getReporter().getUserName());
         }
+
+        if (task.getAssignee() != null) {
+            taskDTO.setAssigneeId(task.getAssignee().getId());
+            taskDTO.setAssigneeName(task.getAssignee().getUserName());
+        }
+
+        if (task.getProject() != null) {
+            taskDTO.setProjectId(task.getProject().getId());
+            taskDTO.setProjectName(task.getProject().getName());
+        }
+
+        if (task.getParentTask() != null) {
+            taskDTO.setParentTaskId(task.getParentTask().getId());
+        }
+
         return taskDTO;
     }
 }
